fixing button spacing

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
 body {
     min-height: 100vh;
     background-color: #ffe6c5;
+    display: relative;
 }
 
 
@@ -67,6 +68,11 @@ body {
     margin: 10px !important;
 }
 
+.scoresBtn {
+    justify-content: space-between;
+    display: flex;
+}
+
 .score-container {
     top: 0 vw !important;
     width: 100% !important;
@@ -74,9 +80,11 @@ body {
     display: absolute;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     background-color: rgb(235, 174, 43);
 }
+
+
 
 button {
     border: none;
@@ -179,4 +187,5 @@ button {
 #user-score {
     font-size: 1.5em;
     color: #ffffff;
+    display: flex;
 }
